z-index header side-menu fixxed

--- a/css/summary.css
+++ b/css/summary.css
@@ -93,7 +93,7 @@ header {
   flex-direction: column;
   align-items: center;
   position: relative;
-  z-index: 1;
+  z-index: 999999;
 }
 
 .logo {
